MP2-2609 permissions and visibility fixes for control report documents + missing info message added + missing validation for duplicated files

--- a/jems-ui/src/common-classes.scss
+++ b/jems-ui/src/common-classes.scss
@@ -562,3 +562,7 @@
   margin-right: -15px;
   margin-left: -15px;
 }
+
+.respect-line-break {
+  white-space: pre-wrap;
+}
